@@ -115,15 +115,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.2.5</version>
                 <configuration>
                     <includes>
                         <include>**/*Runner.java</include>
                     </includes>
-                    <argLine>
-                        --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-                        --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
-                    </argLine>
                 </configuration>
             </plugin>
 
